SS: changged to approved content

--- a/SS_grouped.html
+++ b/SS_grouped.html
@@ -515,10 +515,10 @@
                               "
                             >
                               <strong class="bold-font"
-                                >Revenue has increased by</strong
+                                >Revenue increased by</strong
                               >
-                              <strong style="color: #43a047">15%</strong>, keep
-                              pushing to maintain the momentum.
+                              <strong style="color: #43a047">15%</strong> –
+                              Performance is improving.
                             </td>
                           </tr>
                           <!-- Spacer after each row Revenue - GA4 -->
@@ -561,8 +561,8 @@
                               <strong class="bold-font"
                                 >Transactions increased by</strong
                               >
-                              <strong style="color: #43a047">8%</strong>,
-                              investigate potential issues.
+                              <strong style="color: #43a047">8%</strong> –
+                              Conversions are up.
                             </td>
                           </tr>
                           <!-- Spacer after each row Transactions - GA4 -->
@@ -603,11 +603,11 @@
                               style="padding-left: 5px; color: #000"
                             >
                               <strong class="bold-font"
-                                >Engaged sessions increades by</strong
+                                >Engaged sessions increased by</strong
                               >
 
-                              <strong style="color: #43a047">12%</strong>, act
-                              to improve user interaction.
+                              <strong style="color: #43a047">12%</strong> –
+                              Interaction is strong.
                             </td>
                           </tr>
                           <!-- Spacer after each row Engaged Sessions - GA4 -->
@@ -655,8 +655,8 @@
                                 >New users surged by</strong
                               >
 
-                              <strong style="color: #43a047">10%</strong>, focus
-                              on retaining this new traffic.
+                              <strong style="color: #43a047">10%</strong> –
+                              Great reach expansion.
                             </td>
                           </tr>
                           <!-- Spacer after each row New Users - GA4 -->
@@ -701,11 +701,11 @@
                               "
                             >
                               <strong class="bold-font"
-                                >Engagement rate increased by</strong
+                                >Engagement rate improved by</strong
                               >
 
-                              <strong style="color: #43a047">10% </strong>,
-                              prioritize enhancing engagement strategies.
+                              <strong style="color: #43a047">10% </strong> –
+                              Audience is active.
                             </td>
                           </tr>
                           <!-- Spacer after each row Engagement Rate - GA4 -->
@@ -749,8 +749,8 @@
                                 >Sessions increased by</strong
                               >
 
-                              <strong style="color: #43a047">12%</strong>, your
-                              traffic is on the rise!
+                              <strong style="color: #43a047">12%</strong> –
+                              Traffic is trending up.
                             </td>
                           </tr>
                           <!-- Spacer after each row Sessions - GA4 -->
@@ -795,10 +795,10 @@
                               "
                             >
                               <strong class="bold-font"
-                                >Bounce rate increased by</strong
+                                >Bounce rate dropped by</strong
                               >
-                              <strong style="color: #43a047">10%</strong>,
-                              review content and user experience.
+                              <strong style="color: #43a047">10%</strong> –
+                              Positive signal, keep monitoring.
                             </td>
                           </tr>
                           <!-- Spacer after each row Bounce Rate - GA4  -->
@@ -843,11 +843,11 @@
                               "
                             >
                               <strong class="bold-font"
-                                >Clicks have surged by</strong
+                                >Clicks surged by</strong
                               >
 
-                              <strong style="color: #43a047">10%</strong>, stay
-                              on top of your growth!
+                              <strong style="color: #43a047">10%</strong> –
+                              Momentum is building.
                             </td>
                           </tr>
                           <!-- Spacer after each row Clicks - GSC  -->
@@ -892,11 +892,11 @@
                               "
                             >
                               <strong class="bold-font"
-                                >Impressions have increased by</strong
+                                >Impressions grew by</strong
                               >
 
-                              <strong style="color: #43a047">10%</strong>,
-                              affecting your visibility.
+                              <strong style="color: #43a047">10%</strong> –
+                              Visibility is up.
                             </td>
                           </tr>
                           <!-- Spacer after each row Impressions - GSC -->
@@ -941,11 +941,11 @@
                               "
                             >
                               <strong class="bold-font"
-                                >Average position has increased by</strong
-                              >
+                                >Average position improved by
+                              </strong>
 
-                              <strong style="color: #43a047">10 spots</strong>,
-                              take action to regain rankings.
+                              <strong style="color: #43a047">10%</strong> –
+                              Rankings are better.
                             </td>
                           </tr>
                           <!-- Spacer after each row Average Position - GSC -->
@@ -991,8 +991,8 @@
                             >
                               <strong class="bold-font">CTR improved to</strong>
 
-                              <strong style="color: #43a047">10%</strong>,
-                              stronger engagement to capitalize on.
+                              <strong style="color: #43a047">10%</strong> –
+                              Engagement is rising.
                             </td>
                           </tr>
                           <!-- SPACER IF NEGATIVES -->
@@ -1038,10 +1038,10 @@
                               "
                             >
                               <strong class="bold-font"
-                                >Revenue has dropped by</strong
+                                >Revenue dropped by</strong
                               >
-                              <strong style="color: #fc3d39">15%</strong>, keep
-                              pushing to maintain the momentum.
+                              <strong style="color: #fc3d39">15%</strong> –
+                              Check sales funnels.
                             </td>
                           </tr>
                           <!-- Spacer after each row Revenue - GA4 -->
@@ -1084,8 +1084,8 @@
                               <strong class="bold-font"
                                 >Transactions dropped by</strong
                               >
-                              <strong style="color: #fc3d39">8%</strong>,
-                              investigate potential issues.
+                              <strong style="color: #fc3d39">8%</strong> –
+                              Investigate drop-off points.
                             </td>
                           </tr>
                           <!-- Spacer after each row Transactions - GA4 -->
@@ -1129,8 +1129,8 @@
                                 >Engaged sessions dropped by</strong
                               >
 
-                              <strong style="color: #fc3d39">12%</strong>, act
-                              to improve user interaction.
+                              <strong style="color: #fc3d39">12%</strong> –
+                              Boost user interest.
                             </td>
                           </tr>
                           <!-- Spacer after each row Engaged Sessions - GA4 -->
@@ -1175,11 +1175,11 @@
                               "
                             >
                               <strong class="bold-font"
-                                >New users surged by</strong
+                                >New users declined by</strong
                               >
 
-                              <strong style="color: #fc3d39">10%</strong>, focus
-                              on retaining this new traffic.
+                              <strong style="color: #fc3d39">10%</strong> –
+                              Attract fresh traffic.
                             </td>
                           </tr>
                           <!-- Spacer after each row New Users - GA4 -->
@@ -1227,8 +1227,8 @@
                                 >Engagement rate dropped by</strong
                               >
 
-                              <strong style="color: #fc3d39">10% </strong>,
-                              prioritize enhancing engagement strategies.
+                              <strong style="color: #fc3d39">10% </strong> –
+                              Focus on content quality.
                             </td>
                           </tr>
                           <!-- Spacer after each row Engagement Rate - GA4 -->
@@ -1272,8 +1272,9 @@
                                 >Sessions dropped by</strong
                               >
 
-                              <strong style="color: #fc3d39">12%</strong>, your
-                              traffic is on the rise!
+                              <strong style="color: #fc3d39">12%</strong> –
+                              Analyze trends and look into potential impact
+                              areas.
                             </td>
                           </tr>
                           <!-- Spacer after each row Sessions - GA4 -->
@@ -1318,10 +1319,10 @@
                               "
                             >
                               <strong class="bold-font"
-                                >Bounce rate dropped by</strong
+                                >Bounce rate increased by</strong
                               >
-                              <strong style="color: #fc3d39">10%</strong>,
-                              review content and user experience.
+                              <strong style="color: #fc3d39">10%</strong> –
+                              Improve page experience.
                             </td>
                           </tr>
                           <!-- Spacer after each row Bounce Rate - GA4  -->
@@ -1366,11 +1367,12 @@
                               "
                             >
                               <strong class="bold-font"
-                                >Clicks have surged by</strong
+                                >Clicks dropped by</strong
                               >
 
-                              <strong style="color: #fc3d39">10%</strong>, stay
-                              on top of your growth!
+                              <strong style="color: #fc3d39">10%</strong> –
+                              Investigate performance changes and possible
+                              causes.
                             </td>
                           </tr>
                           <!-- Spacer after each row Clicks - GSC  -->
@@ -1415,11 +1417,12 @@
                               "
                             >
                               <strong class="bold-font"
-                                >Impressions have dropped by</strong
+                                >Impressions fell by</strong
                               >
 
-                              <strong style="color: #fc3d39">10%</strong>,
-                              affecting your visibility.
+                              <strong style="color: #fc3d39">10%</strong> –
+                              Assess visibility and underlying performance
+                              shifts.
                             </td>
                           </tr>
                           <!-- Spacer after each row Impressions - GSC -->
@@ -1464,11 +1467,11 @@
                               "
                             >
                               <strong class="bold-font"
-                                >Average position has dropped by</strong
+                                >Average position dropped by</strong
                               >
 
-                              <strong style="color: #fc3d39">10 spots</strong>,
-                              take action to regain rankings.
+                              <strong style="color: #fc3d39">10%</strong> –
+                              Optimize SEO tactics.
                             </td>
                           </tr>
                           <!-- Spacer after each row Average Position - GSC -->
@@ -1512,10 +1515,12 @@
                                 color: #000;
                               "
                             >
-                              <strong class="bold-font">CTR improved to</strong>
+                              <strong class="bold-font"
+                                >CTR decreased to</strong
+                              >
 
-                              <strong style="color: #fc3d39">10%</strong>,
-                              stronger engagement to capitalize on.
+                              <strong style="color: #fc3d39">10%</strong> –
+                              Optimize messaging.
                             </td>
                           </tr>
 
