RT: changged to approved content

--- a/RT_2_camp_plus.html
+++ b/RT_2_camp_plus.html
@@ -793,9 +793,8 @@
                             >
                               <strong class="bold-font">5 Keywords</strong>
                               moved up by
-                              <strong style="color: #43a047"
-                                >10+ Positions</strong
-                              >
+                              <strong style="color: #43a047">10+ </strong
+                              >Positions
                             </td>
                           </tr>
                           <!-- Spacer after each row Moved up by 10 position -->
@@ -936,9 +935,8 @@
                             >
                               <strong class="bold-font">5 Keywords</strong>
                               dropped by
-                              <strong style="color: #fc3d39"
-                                >10+ Positions</strong
-                              >
+                              <strong style="color: #fc3d39">10+ </strong
+                              >Positions
                             </td>
                           </tr>
 
@@ -1465,9 +1463,8 @@
                             >
                               <strong class="bold-font">5 Keywords</strong>
                               moved up by
-                              <strong style="color: #43a047"
-                                >10+ Positions</strong
-                              >
+                              <strong style="color: #43a047">10+ </strong
+                              >Positions
                             </td>
                           </tr>
                           <!-- Spacer after each row Moved up by 10 position -->
@@ -1608,9 +1605,8 @@
                             >
                               <strong class="bold-font">5 Keywords</strong>
                               dropped by
-                              <strong style="color: #fc3d39"
-                                >10+ Positions</strong
-                              >
+                              <strong style="color: #fc3d39">10+ </strong
+                              >Positions
                             </td>
                           </tr>
 
