--- a/Single_templates/top_10.html
+++ b/Single_templates/top_10.html
@@ -424,7 +424,7 @@
                               </tbody>
                               
                               <tr>
-                                <td style="padding:10px 10px 20px 10px;text-align:center"class=footer>
+                                <td style="line-height:15pt;padding:20px 20px 25px 20px;text-align:center"class=footer>
                                   You are receiving this email as part of your
                                   Infigrowth account. We strive to provide
                                   valuable insights, but if you’d like to make
