--- a/SS_grouped.html
+++ b/SS_grouped.html
@@ -263,66 +263,6 @@
                         </tr>
                       </table>
                     </span>
-                    <span
-                      class="pill-col"
-                      style="
-                        padding-bottom: 10px;
-                        margin-right: 10px;
-                        display: inline-block;
-                      "
-                    >
-                      <table
-                        style="border-spacing: 0"
-                        width="100%"
-                        cellpadding="0"
-                        cellspacing="0"
-                      >
-                        <tr>
-                          <td>
-                            <span class="bold-font" style="font-weight: 600"
-                              >Project :</span
-                            >
-                            <!-- 📌 Updated pill span -->
-                            <span
-                              style="
-                                display: inline-block;
-                                vertical-align: middle; /* 🆕 updated to middle */
-                                border: 2px solid;
-                                padding: 5px 10px;
-                                border-radius: 4px;
-                              "
-                            >
-                              <!-- 🆕 Created inner table for icon and text -->
-                              <table
-                                style="border-spacing: 0"
-                                cellpadding="0"
-                                cellspacing="0"
-                                border="0"
-                              >
-                                <tr>
-                                  <td
-                                    style="
-                                      padding-right: 5px;
-                                      vertical-align: middle;
-                                    "
-                                  >
-                                    <img
-                                      height="20"
-                                      width="20"
-                                      src="https://res.cloudinary.com/dpwevdzrq/image/upload/v1744291329/Infidigit_Favicon_1_1_kew3ec.png"
-                                      style="display: block"
-                                    />
-                                  </td>
-                                  <td style="vertical-align: middle">
-                                    Infidigit SEO India
-                                  </td>
-                                </tr>
-                              </table>
-                            </span>
-                          </td>
-                        </tr>
-                      </table>
-                    </span>
                   </div>
                 </td>
               </tr>
@@ -388,7 +328,7 @@
                                   white-space: nowrap;
                                 "
                               >
-                                Overview of Alerts for Campaign :
+                                Overview of Alerts for Project :
                               </td>
                             </tr>
                           </table>
@@ -419,50 +359,21 @@
                                 <img
                                   height="20"
                                   width="20"
-                                  src="https://res.cloudinary.com/dpwevdzrq/image/upload/v1745567065/google_1_1_s5svny.png"
+                                  src="https://res.cloudinary.com/dpwevdzrq/image/upload/v1744291329/Infidigit_Favicon_1_1_kew3ec.png"
                                   style="display: block"
                                 />
                               </td>
-                              <td style="padding-right: 5px" valign="middle">
-                                <img
-                                  height="18"
-                                  width="21"
-                                  src="https://res.cloudinary.com/dpwevdzrq/image/upload/v1745567065/Flag_hdseof.png"
-                                  style="display: block"
-                                />
-                              </td>
+
                               <td
                                 style="
-                                  padding-right: 10px;
-                                  border-right: 2px solid #e2e8f0;
-                                  font-weight: 600;
-                                  font-size: 14px;
-                                  color: #000;
-                                  padding-left: 5px;
-                                  white-space: nowrap;
-                                "
-                                valign="middle"
-                              >
-                                America
-                              </td>
-                              <td style="padding: 0 8px" valign="middle">
-                                <img
-                                  height="20"
-                                  width="20"
-                                  src="https://res.cloudinary.com/dpwevdzrq/image/upload/v1745567065/FirstAddon_1_ljd1fz.png"
-                                  style="display: block"
-                                />
-                              </td>
-                              <td
-                                style="
-                                  font-weight: 600;
+                                  font-weight: 500;
                                   font-size: 14px;
                                   color: #000;
                                   white-space: nowrap;
                                 "
                                 valign="middle"
                               >
-                                Desktop
+                                Infidigit SEO India
                               </td>
                             </tr>
                           </table>
